--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "This is simple NodeJS Aplicattion",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node .",
+    "serve": "nodemon ."
   },
   "keywords": [
     "node",
@@ -14,7 +15,9 @@
   "license": "ISC",
   "dependencies": {
     "chalk": "^4.1.2",
-    "excel": "^1.0.1",
     "yargs": "^17.6.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.20"
   }
 }
